corrections version mobile

--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ h4{
     justify-content: center;
     cursor: pointer;
     font-size: 20px;
-    width: 50px;
+    flex: 0 0 50px;
     height: 50px;
     border-radius: 15px 0px 0px 15px;
     border: 0;
@@ -188,7 +188,7 @@ h4{
 .search-bar .searchfield{
     font-size: 18px;
     font-weight: bold;
-    width: 195px;
+    flex: 0 0 195px;
     height: 50px;
     border:0;
     padding-left: 10px;
@@ -197,7 +197,7 @@ h4{
     box-sizing: border-box;
 }
 .search-bar .submit-container{
-    width: 132px;
+    flex: 0 0 132px;
     height: 50px;
     border: 0;
     box-sizing: border-box;
@@ -368,7 +368,6 @@ h4{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 42.2%;
     margin-top: 0;
     margin-left: 10px;
     box-sizing: border-box;
@@ -379,20 +378,24 @@ h4{
 }
 
 .hebergements-cards .card-title{
-    margin: 0px;
-    padding-top: 5px;
+    margin-top: 5px;
     box-sizing: border-box;
 }
 
 .hebergements .card-subtitle{
-    margin: 0px;
-    padding-top: 10px;
+    margin-top: 10px;
     font-size: 14px;
 }
 
 .hebergements .card-rating{
-    margin-top: 10px;
+    margin: 10px 0px;
     box-sizing: border-box;
+}
+
+.hebergements .card-rating .fa-solid{
+    font-size: 13px;
+    margin: 0;
+    padding: 0;
 }
 
 .hebergements .afficher-plus h3{
@@ -446,6 +449,12 @@ h4{
     margin-bottom: 5px;
 }
 
+.populaires .card-rating .fa-solid{
+    font-size: 12px;
+    margin: 0;
+    padding: 0;
+}
+
 /**********Activités**************/
 .activites{
     margin: 35px 0px;
@@ -482,12 +491,16 @@ h4{
     border-radius: 20px 20px 0 0;
     box-sizing: border-box;
 }
- .activites-cards .card-txt{
+.activites-cards .card-txt{
     display: flex;
     height: 59px;
-    margin-left: 15px;
+    padding: 20px;
     align-items: center;
     box-sizing: border-box;
+}
+.activites-cards .card-txt h3{
+    margin: 0;
+    padding: 0;
 }
 
 /***********Footer************/
@@ -612,9 +625,11 @@ h4{
         height: 200px;
 
     }
-     .activites-cards .card-txt{
+
+    .activites-cards .card-txt{
         height: 70px;
     }
+
 }
 
 /* Small devices (phones, less than 768px) */
@@ -682,11 +697,19 @@ h4{
         box-sizing: border-box;
     }
 
-    .search-bar .searchfield{
-        max-width: 215px;
+    .search-bar .gps{
+        flex: 0 1 50px;
+        min-width: 10px;
     }
+
+    .search-bar .searchfield{
+        flex: 0 1 235px;
+        min-width: 100px;
+    }
+
     .search-bar .submit-container{
-        max-width: 50px;
+        flex:0 1 50px;
+        min-width: 10px;
         border-bottom: #F2F2F2 1px solid;
         border-top: #F2F2F2 1px solid;
         border-radius: 0 15px 15px 0;
@@ -779,11 +802,20 @@ h4{
         margin-top: 15px;
     }
 
+    .hebergements-cards img{
+        object-position: 50% 60%;
+    }
+
     .hebergements-cards a{
         width: 100%;
         max-width: 400px;
         flex: 0 0 100%;
         height: 210px;
+        box-sizing: border-box;
+    }
+
+    .hebergements .card-rating{
+        margin: 10px 0px 5px 0px;
         box-sizing: border-box;
     }
 
@@ -799,6 +831,7 @@ h4{
     
     .activites-cards a{
         width: 100%;
+        max-width: 400px;
     }
     
     .activites-cards .card{
@@ -807,6 +840,11 @@ h4{
     
     .activites-cards img{
         height: 141px;
+        object-position: 50% 40%;
+    }
+
+    .activites-cards .card-txt{
+        height: 59px;
     }
 
     .footer{
@@ -817,7 +855,7 @@ h4{
     }
     
     .footer-column{
-        width: 300px;
+        width: fit-content;
     }
     
 
